    and ArrayList. (Carl Steinbach via zshao)

    HIVE-1105. Add service script for starting metastore server.
    (John Sichi via zshao)

    HIVE-1109. Structured temporary directories
    (Zheng Shao via Ning Zhang)

    HIVE-1068. CREATE VIEW followup: add a 'table type' enum attribute in
    metastore's MTable. (John Sichi via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1047. Merge tasks in GenMRUnion1
    (Ning Zhang via namit)

    HIVE-1048. Make output of TestParse determinisitc
    (Paul Yang via namit)

    HIVE-1045. (bigint % int) should return bigint instead of double.
    (Paul Yang via zshao)

    HIVE-1046. Pass build.dir.hive and other properties to subant
    (Zheng Shao via namit)

    HIVE-1066. Fix test outputs serde_typedbytes*.q
    (Zheng Shao via namit)

    HIVE-1064. Null Pointer Exception in Hive CLI in distributed mode
    (Carl Steinbach via Ning Zhang)

    HIVE-1075. Make it possible for users to recover data when moveTask fails
    (Zheng Shao via Ning Zhang)

    HIVE-1072. Show table extended to error out when the partition does not exist.
    (Yongqiang He via zshao)

    HIVE-1085. ColumnarSerde should not be the default Serde when user
    specified a fileformat using 'stored as' (Yongqiang He via Ning Zhang)

    HIVE-1086. Add "-Doffline=true" option to ant. (Zheng Shao via Ning Zhang)

    HIVE-1094. Disable streaming last table if there is a skew key in
    previous tables. (He Yongqiang via namit)

    HIVE-1097. Increase memory for groupby_bigdata.q for intermittent OOM
    (Paul Yang via namit)

    HIVE-763. getSchema returns invalid column names, getThriftSchema does
    not return old style string schemas (John Sichi via namit)

    HIVE-1102. make number of concurrent tasks configurable
    (He Yongqiang via namit)

    HIVE-1069. CREATE VIEW followup: find and document current expected
    version of thrift (John Sichi via namit)

    HIVE-898. Hive ODBC build fails on OSX.